--- a/FatecShop/index.html
+++ b/FatecShop/index.html
@@ -4,23 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FatecShop</title>
-</head>
+</head> 
+<style>
+    h2 {
+        font-family: Arial, Helvetica, sans-serif;
+        color: maroon;
+        font-weight: bold;
+        text-shadow: 1px 1px 1px black;
+    }
+    header {
+        border: 2px solid black;
+        margin: 2px;
+    }
+
+    nav {
+        border: 2px solid black;
+        margin: 2px;
+    }
+
+    main {
+        border: 2px solid black;
+        margin: 2px;
+    }
+
+    footer {
+        border: 2px solid grey;
+    }
+</style>
 <body>
     <header>
-        <h1></h1>
+        <img src="" alt="">
+        <h1>FatecShop</h1>
+        <p>Aqui tudo é mais barato</p>
         <nav>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>Inicio</li>
+                <li>Produtos</li>
+                <li>Ofertas</li>
+                <li>Lançamentos</li>
+                <li>Carrinho</li>
+                <li>Ajuda</li>
             </ul>
         </nav>
-
     </header>
     <main>
+        <h2>Lançamentos</h2>
+        <section id="lancamentos">
+            <div class="card">
+                <img src="" alt="">
+                <h3>Notebook Lenovo</h3>
+                <p>Notebook intel i5 com 8gb RAM</p>
+                <span>R$ 4.500</span>
+                <button>Comprar</button>
+            </div>
+        </section>
+        <h2>Ofertas</h2>
+        <section id="ofertas">
 
+        </section>
     </main>
-    
+    <footer>
+        <div id="redes">
+            <ul>
+                <li>Instagram</li>
+                <li>Facebook</li>
+                <li>TikTok</li>
+            </ul>
+        </div>
+        <address>
+            Av. das Univercidades,1234 Marília-SP CEP12345-000
+        </address>
+    </footer> 
 </body>
 </html>
