--- a/FatecShop/index.html
+++ b/FatecShop/index.html
@@ -3,39 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
     <title>FatecShop</title>
 </head> 
 <style>
-    h2 {
-        font-family: Arial, Helvetica, sans-serif;
-        color: maroon;
-        font-weight: bold;
-        text-shadow: 1px 1px 1px black;
-    }
-    header {
-        border: 2px solid black;
-        margin: 2px;
-    }
-
-    nav {
-        border: 2px solid black;
-        margin: 2px;
-    }
-
-    main {
-        border: 2px solid black;
-        margin: 2px;
-    }
-
-    footer {
-        border: 2px solid grey;
-    }
+    
 </style>
 <body>
     <header>
         <img src="" alt="">
         <h1>FatecShop</h1>
         <p>Aqui tudo é mais barato</p>
+    </header>
         <nav>
             <ul>
                 <li>Inicio</li>
@@ -46,7 +25,7 @@
                 <li>Ajuda</li>
             </ul>
         </nav>
-    </header>
+    
     <main>
         <h2>Lançamentos</h2>
         <section id="lancamentos">
